fixed illu spacing

--- a/packages/react-components/src/dialog/src/Dialog.css
+++ b/packages/react-components/src/dialog/src/Dialog.css
@@ -24,6 +24,7 @@
     border-radius: var(--o-ui-global-scale-bravo);
     display: grid;
     grid-template-areas: "illustration aside";
+    grid-template-columns: max-content 1fr;
 }
 
 .o-ui-dialog:focus-visible {
@@ -50,6 +51,7 @@
 .o-ui-dialog-aside {
     padding: var(--o-ui-global-scale-india);
     display: grid;
+    grid-area: aside;
     grid-template-columns: 1fr max-content;
     grid-template-rows: max-content max-content;
     grid-template-areas:
